@@ -1,3 +1,5 @@
+- Refactor: Replace discontinued PaymentCodePool by DigitalPaymentPlatform
+
 7.0.2 (13-04-2021)
 - Bug Fix: Invoking deprecated payment request service (UL-ISEG-552, UL-ISEG-560)
 
